# cpp_homework5

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  homework_5.h  serialize.cpp  serialize.hpp
include/convert_dataset/: CMakeLists.txt  convert_dataset.cpp
include/serialize/: CMakeLists.txt  serialize.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  sifts_internal.cpp
